* AKFAvatar-testing

  - paging through menus is animated
  - fix: window resizing for the pager works again
  - fix: avt_credits sometimes got the end wrong
  - fix: audioplayer.lua accepts PLS playlists again
  - lua/audioplayer.lua: improved playlist support

  C-API changes:
    - avt_char is uint_least32_t now, avt_choice adapted
      should be compatible with char32_t in C11
    - new functions: avt_say_u8, avt_say_u8_len, avt_ask_u8,
      avt_tell_u8, avt_tell_u8_len, avt_set_avatar_name_u8,
      avt_pager_u8, avt_credits_u8,
      avt_say_l1, avt_say_l1_len, avt_ask_l1, avt_tell_l1,
      avt_tell_l1_len, avt_set_avatar_name_l1, avt_pager_l1,
      avt_credits_l1

  Lua-API changes:
    - avt.set_directory or avt.chdir return true on success
      or nil and an error message on error

  Pascal-API changes:
    - variable CheckEsc removed
    - new procedures/functions: ReadKeyCode, reserve_single_keys


* AKFAvatar 0.23.1

  - fixed vulnerabilities
  - avoid recursive calls of the bell
  - split source code for better maintainablitity
  - name sign with 3d effect

  C-API changes:
    - avt_set_title: no automatic charset conversion
    - avt_put_char: support for UTF-16 surrogate characters
    - new functions: avt_wide_copyright, avt_wide_license, avt_wide_version,
      avt_menu, avt_palette_size
    - avtaddons:
      - avta_file_selection and avta_filter have a new parameter "data",
        which is passed along

  Lua-API changes:
    - Module "akfavatar-graphic"
      - new methods: gr:border3d

* AKFAvatar 0.23.0

  The code was made less dependend on SDL. There is a new experimantal
  backend for a Linux framebuffer device, but without mouse support or audio
  (of course you can call an external audio-player in your scripts).

  - bugfix: fix for XPM images with more than 256 colors
  - bugfix: lua-akfavatar also resets the charset
  - bugfix/change: lua-akfavatar option -l sets a global variable
  - avt_update() is much faster