@@ -1,7 +1,6 @@
 2013-06-10  Andreas K. Foerster  <info@akfoerster.de>
 
-	* avatar.c (avt_move_in, avt_move_out):
-	don't check for events while moving (bug workaround)
+	* avatar.c (avt_move_in, avt_move_out): fixed
 
 2013-06-09  Andreas K. Foerster  <info@akfoerster.de>
 
